k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortel-service
spec:
  selector:
    app: fortel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
